--- a/public/style.css
+++ b/public/style.css
@@ -4,6 +4,23 @@
   align-items: center;
 }
 
+.flex-row-no-res {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
+
+/* 移动端调整 */
+@media (max-width: 480px) {
+  .flex-row {
+    flex-direction: column; /* 小屏幕改为垂直排列 */
+  }
+  
+  .flex-row button {
+    width: 100%;
+  }
+}
+
 .space-between {
   justify-content: space-between;
 }
@@ -638,16 +655,3 @@ hr {
   margin: 20px 0;
 }
 
-
-
-
-/* 移动端调整 */
-@media (max-width: 480px) {
-  .flex-row {
-    flex-direction: column; /* 小屏幕改为垂直排列 */
-  }
-  
-  .flex-row button {
-    width: 100%;
-  }
-}
